# gec_courrier_mine

./: CHANGELOG.md  GUIDE_MISE_A_JOUR_GITHUB.md  GUIDE_STOCKAGE_DONNEES.md  README-ENV-EN.md  README-ENV.md  README.md  app.py  cleanup_database.py  cookies.txt  create_missing_tables.py  email_utils.py  encryption_utils.py  export_import_utils.py  fix_database_final.py  fix_migration.py  gec_mines.db  generate_keys.py  install-gec-linux.sh  install-gec-macos.sh  install-gec-windows-server.bat  install-gec-windows.bat  lang_utils.py  migration_utils.py  models.py  performance_utils.py  project-dependencies.txt  pyproject.toml  recreate_parametres_table.py  replit.md  security_utils.py  show_env_keys.py  utils.py  verify_installation.py  version.txt  views.py
attached_assets/: Pasted--venv-PS-C-Users-HP400G4-gec-git-fetch-origin-git-reset-hard-origin-main-remote-Enumerat-1760622284230_1760622284231.txt  Pasted--venv-PS-C-Users-HP400G4-gec-git-fetch-origin-git-reset-hard-origin-main-remote-Enumerat-1760622499969_1760622499970.txt  Pasted--venv-PS-C-Users-HP400G4-gec-git-fetch-origin-venv-PS-C-Users-HP400G4-gec-git-reset-hard-1760622080509_1760622080511.txt  Pasted-PS-C-Users-HP400G4-gec-venv-Scripts-Activate-ps1-venv-PS-C-Users-HP400G4-gec-python-mai-1760621702830_1760621702831.txt
docs/: INDEX.md  README_COMMERCIAL_EN.md  README_COMMERCIAL_FR.md  README_TECHNICAL_EN.md  README_TECHNICAL_FR.md  deployment_checklist.md  deployment_notes.md
instance/: gec_mines.db
lang/: en.json  fr.json
templates/: 403.html  429.html  add_department.html  add_email_template.html  (+42 more)
(+3 files in other folders)
